fix category menu overflow

--- a/src/styles/elements/_base.scss
+++ b/src/styles/elements/_base.scss
@@ -53,6 +53,10 @@ h6 {
   width: 100%;
 }
 
+#root {
+  overflow-x: hidden;
+}
+
 .logo {
   height: 32px;
   margin: 16px;
